Added plots to explore association between SKU and categorical variables and correlations among numeric variables. Also dropped Block_Orientation from dataset as not informative

--- a/requirements.txt
+++ b/requirements.txt
@@ -18,3 +18,25 @@ setuptools==39.1.0
 simpy==3.0.11
 six==1.12.0
 sklearn==0.0
+autograd==1.2
+Bottleneck==1.2.1
+cycler==0.10.0
+future==0.17.1
+kiwisolver==1.0.1
+lifelines==0.19.4
+matplotlib==3.0.2
+numpy==1.16.1
+pandas==0.24.1
+patsy==0.5.1
+pip==19.0.3
+pyparsing==2.3.1
+python-dateutil==2.8.0
+pytz==2018.9
+scikit-learn==0.20.2
+scipy==1.2.1
+seaborn==0.9.0
+setuptools==39.1.0
+simpy==3.0.11
+six==1.12.0
+sklearn==0.0
+statsmodels==0.9.0
